--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<img src="a1ec08fa513d2697d690a5125efbb2fb4316d83a.jpg"
+<img src="a1ec08fa513d2697d690a5125efbb2fb4316d83a.jpg"/>
 <p>Body</p>
 </body>
 </html>
