--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style type="text/css">
+        body{
+            background-image: url("a1ec08fa513d2697d690a5125efbb2fb4316d83a.jpg");
+            background-size: 100% 100%;
+            height:100%;
+        }
+        html{
+            height:100%;
+        }
+    </style>
 </head>
 <body>
-<img src="a1ec08fa513d2697d690a5125efbb2fb4316d83a.jpg"/>
 <h1>Big</h1>
 <p>Body</p>
 </body>
